在 ELPA 包列表中增加 bm、evil。

--- a/.emacs.d/initialize.org
+++ b/.emacs.d/initialize.org
@@ -1009,10 +1009,11 @@
 
 #+BEGIN_SRC emacs-lisp
   (defvar wb-elpa-packages
-    '(anything
-      avy
+    '(avy
+      bm
       company
       company-irony
+      evil
       ggtags
       helm
       helm-gtags
